@@ -31,8 +31,8 @@
 
 G_BEGIN_DECLS
 
-typedef struct _HildonBreadCrumbTrail	HildonBreadCrumbTrail;
-typedef struct _HildonBreadCrumbTrailClass	HildonBreadCrumbTrailClass;
+typedef struct _HildonBreadCrumbTrail   HildonBreadCrumbTrail;
+typedef struct _HildonBreadCrumbTrailClass      HildonBreadCrumbTrailClass;
 typedef struct _HildonBreadCrumbTrailPrivate HildonBreadCrumbTrailPrivate;
 
 #define HILDON_TYPE_BREAD_CRUMB_TRAIL                 (hildon_bread_crumb_trail_get_type ())
@@ -54,15 +54,15 @@ struct _HildonBreadCrumbTrailClass
   GtkContainerClass parent_class;
 
   void (*crumb_clicked) (HildonBreadCrumbTrail *bct,
-			 gpointer id);
+                         gpointer id);
 };
 
 GType hildon_bread_crumb_trail_get_type (void) G_GNUC_CONST;
 GtkWidget *hildon_bread_crumb_trail_new (void);
 void hildon_bread_crumb_trail_push (HildonBreadCrumbTrail *bct, HildonBreadCrumb *item,
-			      gpointer id, GDestroyNotify  notify);
+                              gpointer id, GDestroyNotify  notify);
 void hildon_bread_crumb_trail_push_text (HildonBreadCrumbTrail *bct, const gchar *text,
-				   gpointer id, GDestroyNotify notify);
+                                   gpointer id, GDestroyNotify notify);
 void hildon_bread_crumb_trail_pop (HildonBreadCrumbTrail *bct);
 void hildon_bread_crumb_trail_clear (HildonBreadCrumbTrail *bct);
 
